packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/agg-001.expr
filter(s, sum(amount) > 10)
# expect: TTRP-AGG-001
